--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <div class="vector1">
       <img src="images/Vector 1.svg" alt="" />
     </div>
+    <div class="vector3">
+      <img src="images/Vector 2.svg" alt="" />
+    </div>
     <div class="header">
       <div class="vector2">
         <img src="images/Vector 1.svg" alt="" />
